# zeitgeist-blog-frontend

./: .gitignore  Dockerfile  package-lock.json  package.json  requirements.txt
api/: Dockerfile  constants.py  posts.py  pyproject.toml  utils.py
app/public/: index.html
app/src/: App.css  App.js  Navbar.js  Post.js  api.js  style.css
app/src/api/: filterPosts.js  posts.py
app/src/components/: Navbar.js  Post.js  Sidebar.js
app/src/pages/: About.js  CreatePost.js  Home.js  LandingPage.js  PostPage.js
data/: posts.json
src/: App.js
src/api/: api.js
src/components/: Navbar.js  Post.js
src/data/: categories.json
src/pages/: CreatePost.js
