[tool.poetry]
name = "zeitgeist-blog-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "6.1.0"
mypy = "1.7.1"
uvicorn = "0.24.0"
fastapi = "0.104.1"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
